design portion finished

--- a/index.html
+++ b/index.html
@@ -13,11 +13,30 @@
 <body>
   <main>
     <article class="blogCard">
-      <img src="assets/images/illustration-article.svg" alt="card graphic">
+      <img src="assets/images/illustration-article.svg" alt="card graphic" id="blogImage">
+
       <div class="cardText">
-        <p></p>
+
+        <div id="learningTextContainer">
+          <p id="learningText">Learning</p>
+
+        </div>
+
+        <p id="publishedText">Published 21 Dec 2023</p>
+        <p id="headerText">HTML & CSS foundations</p>
+        <p id="descriptionText">
+          These languages are the backbone of every website, 
+          defining structure, content, and presentation.
+        </p>
+
       </div>
-      <div></div> <!-- going to be user image-->
+
+      <div class="userContainer">
+        <img src="assets/images/image-avatar.webp" alt="User Image">
+        <p id="userName">Greg Hooper</p>
+
+      </div>
+
     </article>
 
   </main>
